force-app/main/default/objects/Profit_Withdrawal__c/Profit_Withdrawal__c.object-meta.xml
<CustomObject>
    <label>Profit Withdrawal</label>
    <nameField>
        <displayFormat>PWD-{0000}</displayFormat>
        <label>Profit Withdrawal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profit Withdrawals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>