force-app/main/default/objects/Profit_Withdrawal__c/fields/Adjusted_Profit__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Profit__c</fullName>
    <label>Adjusted Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>