force-app/main/default/objects/Profit_Withdrawal__c/fields/Company_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Company_Reserve__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Company Reserve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>