force-app/main/default/objects/Profit_Withdrawal__c/fields/Rohan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rohan_Amount__c</fullName>
    <label>Rohan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>