force-app/main/default/objects/Profit_Withdrawal__c/fields/Vikram_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vikram_Amount__c</fullName>
    <label>Vikram Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>